--- a/.gitignore
+++ b/.gitignore
@@ -166,6 +166,7 @@ cython_debug/
 
 ### VisualStudioCode ###
 .vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
